--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -56,7 +56,7 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
     <div class="flex-container">
-        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
+        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png" style="padding-left:40px;"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
     </div>
