--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -46,7 +46,7 @@ img {
 .flex-container div {
         background-color: #FFFFFF;
         margin: 10px;
-        padding: 0px;
+        padding: 40px;
 	flex-direction: column;
     }
 	
@@ -56,7 +56,7 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
     <div class="flex-container">
-        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png" style="padding-left:40px;"></div>
+        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
     </div>
